<resources>
    <string name="app_name">Active Defender</string>
    <string name="mainscreen_title">Active Defender</string>
    <string name="datamanage_tab_backup">安全备份</string>
    <string name="mobile_security">手机防盗</string>
    <string name="mainscreen_drawer_toolbox">实用工具</string>
    <string name="call_protection">话费查询</string>
    <string name="tool_box_scanfee_title">设置中心</string>
    <string name="mainscreen_drawer_info_left">点击展开</string>
    <string name="mainscreen_drawer_info_right">更多功能</string>
    <string name="title_beh_logger">行为日志</string>
    <string name="summary_beh_logger">记录应用程序的敏感行为</string>
    <string name="title_network_authority">联网权限管理</string>
    <string name="summary_network_authority">管理应用程序的网络连接权限</string>
    <string name="title_system_setttings">系统设置</string>
    <string name="summary_system_setttings">配置安全软件功能</string>
    <string name="title_traffic_monitor">流量监控</string>
    <string name="summary_traffic_monitor">监控应用程序的网络流量</string>
    <string name="power_index_content1">多重省电模式,帮您自动省电.</string>
    <string name="float_windows_btn_power">节电管理</string>
    <string name="title_app_management">行为规则管理</string>
    <string name="summary_app_management">管理手机中的应用程序</string>
    <string name="title_malware_detection">恶意软件检测</string>
    <string name="summary_malware_detection">全盘扫描手机中的应用程序</string>
    <string name="netwall_title">Network Permission Manager</string>
    <string name="software">Applications</string>
    <string name="gprs">2G/3G</string>
    <string name="wifi">WiFi</string>
    <string name="working">Warning：</string>
    <string name="loading">Loading Applications</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="unsaved_changes_message">You have unsaved changes, will you save these changes or not?</string>
    <string name="apply">Apply</string>
    <string name="discard">Discard</string>
    <string name="allapps">All Applications</string>
    <string name="menuEnableWall">Enable Netwall</string>
    <string name="menuSaveRules">Save Rules</string>
    <string name="menuDisableWall">Disable Netwall</string>
    <string name="menuApplyRules">Apply Rules</string>
    <string name="text_time_interval">监控间隔</string>
    <string name="view_detail">点击查看详细信息</string>
    <string name="text_app_unsafe_format">警告！%1$s有安全风险</string>
    <string name="text_app_safe_format">%1$s未检测到风险</string>
    <string name="text_white_list">白名单</string>
    <string name="superuser_permissions_description">Superuser permissions grants the application full (root) access to all the phone\'s capabilities.</string>
    <string name="superuser_permissions_name">Superuser Permissions</string>
    <string name="permission_request_format">%1$s(uid:%2$d)正在试图访问 \n%3$s服务</string>
    <string name="text_yes_btn">允许</string>
    <string name="text_no_btn">拒绝</string>
    <string name="radio_btn_hint">记住选择</string>
    <string name="sm_main_btn_hide">隐藏手机自带软件</string>
    <string name="sm_main_btn_display">显示手机自带软件</string>
    <string name="sm_item_privacy_phone">手机识别码</string>
    <string name="sm_item_storage">存储</string>
    <string name="sm_item_privacy">隐私相关</string>
    <string name="sm_item_network_2g_info">通过2G/3G网络联网</string>
    <string name="sm_item_trust_info">此款软件受行为监控</string>
    <string name="sm_item_trust">信任</string>
    <string name="sm_item_trust_disable">此款软件受Active Defender监控</string>
    <string name="sm_item_trust_enable">此款软件为免检软件，允许其一切操作</string>
    <string name="sm_item_network">访问网络</string>
    <string name="sm_item_network_2g">通过2G/3G网络联网</string>
    <string name="sm_item_network_wifi_info">通过Wifi网络联网</string>
    <string name="sm_item_storage_data">数据:</string>
    <string name="sm_item_storage_total">总量:</string>
    <string name="sm_item_networktraffic">网络流量</string>
    <string name="sm_main_button">卸载</string>
    <string name="sm_item_network_wifi">通过Wifi网络联网</string>
    <string name="sm_item_storage_app">应用程序:</string>
    <string name="sm_main_title">软件管理</string>
    <string name="sm_item_privacy_info">获得您的手机识别码，包括IMEI、IMSI、手机号码</string>
    <string name="sm_main_dialog">正在卸载...</string>
    <string name="sm_item_title">配置软件权限</string>
    <string name="sm_item_safety">安全相关</string>
    <string name="sm_Action_Accept">允许</string>
    <string name="sm_Action_Prompt">提示</string>
    <string name="sm_Action_Reject">拒绝</string>
    <string name="bootmgr_page1_title">普通应用</string>
    <string name="bootmgr_page2_title">系统应用</string>
    <string name="bootmgr_item_title_text_app">程序</string>
    <string name="bootmgr_item_title_text_state">状态</string>
    <string name="enter_defender">点击进入XDroid Defender</string>
    <string name="click_to_start_proactive">启动主动防御</string>
    <string name="proactive_has_started">主动防御已启动</string>
    <string name="request_dlg_title">安全提醒</string>
    <string name="request_dlg_remember_choice">记住我的选择</string>
    <string name="request_dlg_btn_ok_text">允许</string>
    <string name="request_dlg_btn_no_text">拒绝</string>
    <string name="policy_switch_key">enable_or_disable</string>
    <string name="pwd_quality_key">pwd_quality</string>
    <string name="pwd_min_length_key">pwd_min_length</string>
    <string name="reset_pwd_key">reset_pwd</string>
    <string name="max_pwd_attempts_key">max_pwd_attempts</string>
    <string name="remote_cmd_key">remote_cmd</string>
    <string name="malware_detection_key">malware_detection</string>
    <string name="beh_interception_key">beh_interception</string>
    <string name="title_restrict">勾选表示限制:</string>
    <string name="title_check_whitelist">勾选表示允许:</string>
    <string name="title_fused">曾经使用</string>
    <string name="title_finternet">网络权限</string>
    <string name="title_fpermission">含有权限</string>
    <string name="title_frestricted">限制使用</string>
    <string name="title_fuser">用户应用</string>
    <string name="title_fondemand">按需过滤</string>
    <string name="title_fsystem">系统应用</string>
    <string name="title_fnot">反选</string>
    <string name="title_sname">按 名称</string>
    <string name="title_suid">按 UID</string>
    <string name="title_sinstalled">按 安装日期</string>
    <string name="title_supdated">按 更新日期</string>
    <string name="title_smodified">按 修改日期 (XPrivacy)</string>
    <string name="title_sinvert">反转分类次序</string>
    <string name="title_attempt">权限使用尝试:</string>
    <string name="title_category">权限类别:</string>
    <string name="title_function">功能:</string>
    <string name="title_parameters">参数:</string>
    <string name="title_applycat">应用到整个权限类别</string>
    <string name="title_once">一次操作生效 %s 秒</string>
    <string name="title_whitelist">白名单 \'%s\'</string>
    <string name="title_allow">允许</string>
    <string name="title_deny">拒绝</string>
    <string name="title_pleasesubmit">请发送你的应用限制信息来帮助其他人</string>
    <string name="title_permissions">权限</string>
    <string name="title_set_restrict">限制</string>
    <string name="title_template_category">Apply template (categories)</string>
    <string name="title_template_full">Apply template (categories+functions)</string>
    <string name="title_enable_ondemand">开启按需权限限制</string>
    <string name="title_disable_ondemand">关闭按需权限限制</string>
    <string name="title_traffic_uptraffic">上传/总流量</string>
    <string name="title_traffic_uplink">上传型/总连接</string>
    <string name="fingerprint" translatable="false">10620ae961d78854f6c9cd872c4388232849c799</string>
    <string name="menu_usage">权限使用记录</string>
    <string name="menu_refresh">刷新应用列表</string>
    <string name="menu_settings">用于被限制应用的模拟信息</string>
    <string name="menu_template">新装应用默认权限模板</string>
    <string name="menu_report">报告问题</string>
    <string name="menu_export">导出全局配置</string>
    <string name="menu_import">导入全局配置</string>
    <string name="menu_submit">分享权限限制规则</string>
    <string name="menu_fetch">下载权限限制规则</string>
    <string name="menu_theme">切换明/暗主题</string>
    <string name="menu_manage">行为规则管理</string>
    <string name="menu_setting">系统设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_help">帮助</string>
    <string name="menu_select_all">选择全部</string>
    <string name="menu_sort">分类</string>
    <string name="menu_filter">过滤器</string>
    <string name="menu_all">全部权限</string>
    <string name="menu_toggle">全选/不选列表中的应用</string>
    <string name="menu_clear_all">清除限制</string>
    <string name="menu_restrict_all">限制所有权限</string>
    <string name="menu_clear_usage">清除权限使用记录</string>
    <string name="menu_clear_db">清除全部数据</string>
    <string name="menu_usage_all">过滤器开关</string>
    <string name="menu_apply">应用默认权限模板</string>
    <string name="menu_clear">清除所有权限限制</string>
    <string name="menu_app_launch">启动应用</string>
    <string name="menu_app_settings">模拟设置</string>
    <string name="menu_app_store">Play 商店</string>
    <string name="menu_app_kill">强制停止当前应用</string>
    <string name="menu_accounts">选择允许访问的帐号</string>
    <string name="menu_applications">选择允许访问的应用</string>
    <string name="menu_contacts">选择允许访问的联系人</string>
    <string name="menu_whitelists">管理白名单</string>
    <string name="menu_tutorial">界面功能指引</string>
    <string name="menu_exclude">排除</string>
    <string name="menu_close">关闭</string>
    <string name="menu_not_installed">使用行为规则管理功能，请先安装监控框架</string>
    <string name="msg_abort">正在中止</string>
    <string name="msg_aborted">已中止</string>
    <string name="msg_new">新应用</string>
    <string name="msg_update">已更新</string>
    <string name="msg_loading">加载中…</string>
    <string name="msg_applying">正在应用过滤器…</string>
    <string name="msg_applied">已应用模版</string>
    <string name="msg_saved_to" formatted="false">保存到%s</string>
    <string name="msg_no_restrictions">没有找到权限限制规则</string>
    <string name="msg_sure">是否确定？</string>
    <string name="msg_select">请选择一些应用程序</string>
    <string name="msg_limit">请不要选择 %d 个以上应用程序</string>
    <string name="msg_done">完成</string>
    <string name="msg_reboot">XPrivacy 需要在重启后才能生效</string>
    <string name="msg_random_now">生成随机数值</string>
    <string name="msg_random_access">访问时随机生成数值</string>
    <string name="msg_random_boot">设备启动时重新生成随机数值</string>
    <string name="msg_restart">需要重启应用使规则生效</string>
    <string name="msg_register">请注册你的设备</string>
    <string name="msg_question" translatable="false">\?</string>
    <string name="msg_email">请输入你的电子邮件地址:</string>
    <string name="msg_registered">查看激活邮件来激活你的设备</string>
    <string name="msg_service">更新服务正在运行</string>
    <string name="msg_migrating" formatted="false">正在移动 %s</string>
    <string name="msg_randomizing" formatted="false">正在随机化 %s</string>
    <string name="msg_upgrading" formatted="false">正在升级 %s</string>
    <string name="msg_support_info">内部检查出现错误, 要发送支持信息吗?</string>
    <string name="msg_restrictedby">由 XPrivacy 限制</string>
    <string name="msg_first"><b>XDroid Defender 的开发和测试工作已经非常全面和细致,
但仍然不可能保证它能完美兼容所有设备及应用。
\n\n使用者需自行承担风险。</b>\n\n另请参阅使用许可:</string>
    <string name="restrict_accounts">账户（ Google/Facebook 账户）</string>
    <string name="restrict_browser">浏览器（收藏夹/历史）</string>
    <string name="restrict_calendar">日历</string>
    <string name="restrict_calling">通讯（语音呼叫/发送短信/发送彩信）</string>
    <string name="restrict_clipboard">剪贴板</string>
    <string name="restrict_contacts">联系人（通讯录）</string>
    <string name="restrict_dictionary">词典（用户词典）</string>
    <string name="restrict_email">电子邮件</string>
    <string name="restrict_identification">识别码（设备识别信息）</string>
    <string name="restrict_internet">互联网（网络通讯）</string>
    <string name="restrict_location">位置（精确/粗略）</string>
    <string name="restrict_media">媒体（声音/图片/视频）</string>
    <string name="restrict_messages">信息（短信/彩信）</string>
    <string name="restrict_network">网络状态（ IP 地址）</string>
    <string name="restrict_notifications">通知（通知栏提示）</string>
    <string name="restrict_overlay">浮动窗口（在其他应用之上显示内容）</string>
    <string name="install">安装/更新</string>
    <string name="uninstall">卸载</string>
	<string name="tabInstall">监控框架</string>
</resources>