<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/skyblue"
        android:weightSum="1.0" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingBottom="5dp"
            android:paddingLeft="2dp"
            android:paddingTop="5dp"
            android:text="@string/netwall_title"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <TextView
            android:id="@+id/title_apps"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".60"
            android:paddingLeft="7dp"
            android:text="@string/software"
            android:textColor="@color/darkgrey"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_gprs"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".20"
            android:text="@string/gprs"
            android:textColor="@color/darkgrey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_wifi"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".20"
            android:text="@string/wifi"
            android:textColor="@color/darkgrey"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".60"
            android:gravity="center"
            android:text="@string/allapps"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/all3g"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20" />

        <CheckBox
            android:id="@+id/allwifi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#000000" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:divider="#000000"
        android:dividerHeight="1px" >
    </ListView>

</LinearLayout>