<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- 标题栏 -->

    <FrameLayout
        android:id="@+id/request_dlg_title"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/dlg_title_blue" >
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/request_dlg_title"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/request_dlg_app_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/warning" />

        <TextView
            android:id="@+id/request_dlg_req_info"
            android:layout_width="235dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/request_dlg_chkbox_remember_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:button="@drawable/request_dlg_chkbox_selector"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/request_dlg_remember_choice"
            android:textColor="@color/gray"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/request_dlg_btn_ok"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/request_dlg_btn_selector"
            android:gravity="center"
            android:text="@string/request_dlg_btn_ok_text" />

        <Button
            android:id="@+id/request_dlg_btn_no"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/request_dlg_btn_selector"
            android:gravity="center"
            android:text="@string/request_dlg_btn_no_text" />
    </LinearLayout>

</LinearLayout>